--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,31 +1,43 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
-    background-color: rgb(235, 237, 241);
+    padding: 10px;
 }
 
 h1{
     text-align: center;
+    padding: 20px;
 }
 
-.container{
+.container-login{
     margin: auto;
-    width: 300px;
+    width: 400px;
     text-align: center;
+    background-color: rgb(255, 255, 255);
+    padding: 20px 20px;
+    border: 1px solid rgb(162, 162, 162);
+    border-radius: 10px;
+}
+
+/* .myContainer .col-2, .myContainer .col{
+    width: 100%;
+    padding: 0;
+} */
+
+.container-login input{
+    font-size: 15px;
+    width: 100%;
+    margin: 10px 0;
+    padding: 5px;
+    border: 0;
+    border-bottom: 1px solid rgb(162, 162, 162);
+}
+
+.container-login .inp-btn{
     font-size: 20px;
-    /* background-color: aqua; */
-}
-
-.inp-login{
-    width: 150px;
-    font-size: 15px;
-    margin: 10px;
-    padding: 5px;
-}
-
-.inp-btn{
-    width: 160px;
-    font-size: 15px;
-    margin: 10px;
-    padding: 5px;
-    background-color: lightblue;
-    border-style: none;
+    border: 0;
+    border-radius: 5px;
+    background-color: #87cefa;
 }
