--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'css/style.css')}}">
-    <title>ReFashioned</title>
-</head>
-<body>
-    <h1>Bienvenido a la app de ReFashioned uaua</h1>
-    <div class="container">
+{% extends 'base.html' %}
+{% block title%} Login {%endblock%}
+
+{% block content%} 
+    <h1>ReFashioned</h1>
+    <div class="container-login">
         <form action="">
             <!-- <label for="user">Usuario</label> -->
-            <input class="inp-login" type="text" name="user" placeholder="Usuario">
+            <div class="row">
+                <div class="col">
+                    <input class="inp-login" type="text" name="user" placeholder="Usuario">
+
+                </div>
+            </div>
             <!-- <label for="password">Contraseña</label> -->
-            <input class="inp-login" type="password" name="password" placeholder="Contraseña">
-            <input class="inp-btn" type="submit" value="Ingresar">
+            <div class="row">
+                <div class="col">
+                    <input class="inp-login" type="password" name="password" placeholder="Contraseña">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <input class="inp-btn" type="submit" value="Ingresar">
+                </div>
+            </div>
         </form>
     </div>
-</body>
-</html>
+{%endblock%}
