--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,43 +1,57 @@
+/* --------------- GLOBAL ---------------*/
 *{
     box-sizing: border-box;
 }
-
 body{
     padding: 10px;
 }
 
+/* --------------- LOGIN, SIGNIN --------------- */
 h1{
     text-align: center;
     padding: 20px;
 }
-
-.container-login{
-    margin: auto;
-    width: 400px;
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-    padding: 20px 20px;
-    border: 1px solid rgb(162, 162, 162);
-    border-radius: 10px;
-}
-
-/* .myContainer .col-2, .myContainer .col{
+.logo_ReFashioned{
     width: 100%;
-    padding: 0;
-} */
-
-.container-login input{
+    max-width: 250px;
+    margin: 20px auto;
+    display: block;
+}
+.container-login, .container-signin{
+    width: 100%;
+    max-width: 350px;
+    padding: 20px 20px 0 20px;
+    border-radius: 10px;
+    margin: auto;
+    text-align: center;
+    border: 1px solid rgb(105, 105, 105);
+}
+.container-signin{
+    width: 100%;
+    max-width: 450px;
+}
+.container-login input, .container-login button,
+.container-signin input, .container-signin button{
     font-size: 15px;
     width: 100%;
-    margin: 10px 0;
+    margin-bottom: 20px;
     padding: 5px;
     border: 0;
-    border-bottom: 1px solid rgb(162, 162, 162);
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
-
-.container-login .inp-btn{
+.container-login .inp-btn, .container-signin .inp-btn{
     font-size: 20px;
     border: 0;
     border-radius: 5px;
-    background-color: #87cefa;
+    
+}
+.container-login .btn-blue, .container-signin .btn-blue{
+    background-color: lightskyblue;
+}
+.container-login .btn-green, .container-signin .btn-green{
+    background-color: lightgreen;
+}
+button a{
+    text-decoration: none;
+    color: black;
 }
