--- a/templates/login.html
+++ b/templates/login.html
@@ -2,27 +2,31 @@
 {% block title%} Login {%endblock%}
 
 {% block content%} 
-    <h1>ReFashioned</h1>
+    <img class="logo_ReFashioned" src="/static/img/logo_ReFashioned_v2.jpg" alt="">
     <div class="container-login">
+        <h3>Login</h3>
         <form action="">
-            <!-- <label for="user">Usuario</label> -->
             <div class="row">
                 <div class="col">
                     <input class="inp-login" type="text" name="user" placeholder="Usuario">
-
                 </div>
             </div>
-            <!-- <label for="password">Contraseña</label> -->
             <div class="row">
                 <div class="col">
                     <input class="inp-login" type="password" name="password" placeholder="Contraseña">
                 </div>
             </div>
+
             <div class="row">
                 <div class="col">
-                    <input class="inp-btn" type="submit" value="Ingresar">
+                    <input class="inp-btn btn-blue" type="submit" value="Ingresar">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button class="inp-btn btn-green"><a href="{{url_for('signin')}}">Crear cuenta</a></button>
                 </div>
             </div>
         </form>
     </div>
-{%endblock%}
+{% endblock %}
