--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/style.css')}}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
-    <title>ReFashioned - {% block title%}{%endblock%}</title>
+    <link rel="icon" href="static/img/icon_logo.png">
+    <title>ReFashioned - {% block title %} {% endblock %}</title>
 </head>
-<body class="container-xxl">
-    {% block content %} 
-    {% endblock %}
+
+<body>
+{% block navbar %}
+{% endblock %}
+
+<div class="container-xxl">
+{% block content %}
+{% endblock %}
+</div>
 </body>
+
 </html>
