--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <button class="inp-btn btn-green" type="button"><a href="{{url_for('signin')}}">Crear cuenta</a></button>
+                    <button class="inp-btn btn-green" type="button"><a href="/signin">Crear cuenta</a></button>
                 </div>
             </div>
         </form>
