--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,7 +5,7 @@
     <img class="logo_ReFashioned" src="/static/img/logo_ReFashioned_v2.jpg" alt="">
     <div class="container-signin">
     <p>Nueva cuenta</p>
-        <form action="">
+        <form action="", method="post">
             <div class="row">
                 <div class="col">
                     <input class="inp-login" type="text" name="name" placeholder="Nombre">
