--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,19 @@
     <title>ReFashioned - {% block title %} {% endblock %}</title>
 </head>
 
-<body>
+<body style="background-color: rgb(240, 241, 242);">
+
 {% block navbar %}
 {% endblock %}
 
-<div class="container-xxl">
-{% block content %}
+{% block front_page %}
 {% endblock %}
+
+<div class="container-content">
+    {% block content %}
+    {% endblock %}
 </div>
+
 </body>
 
 </html>
