--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,22 @@
 {% block title %} Login {% endblock %}
 
 {% block navbar %} 
-<div class="app-nav-container">
-<div class="container-xxl app-nav">
-    <a href=""><img src="/static/img/logo_ReFashioned_v2_430.png"></a>
-    <a href="">Productos</a>
-    <a href="">Mis pedidos</a>
-    <a class="nav-acount" href="">Cuenta</a>
-</div>
+<div class="container-page-nav">
+    <div class="page-nav">
+        <a href="/home"><img src="/static/img/logo_ReFashioned_v2_733.png"></a>
+        <a href="/products">Productos</a>
+        <a href="">Mis pedidos</a>
+        <a class="nav-account" href="">Cuenta</a>
+    </div>
 </div>
 {% endblock %}
 
+{% block front_page %}
+<div class="div-portada">
+    <img class="img-portada" src="static/img/portada.png" alt="">
+</div>
+{% endblock %}
+
+
 {% block content %} 
-    <h1>hola bb</h1>
 {% endblock %}
