Pedidos, cuenta, actualizar cuenta

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
-{% block title %} Login {% endblock %}
+{% block title %} Home {% endblock %}
 
 {% block navbar %} 
 <div class="container-page-nav">
     <div class="page-nav">
         <a href="/home"><img src="/static/img/logo_ReFashioned_v2_733.png"></a>
         <a href="/products">Productos</a>
-        <a href="">Mis pedidos</a>
-        <a class="nav-account" href="">Cuenta</a>
+        <a href="/orders">Mis pedidos</a>
+        <a class="nav-account" href="/account">Cuenta</a>
     </div>
 </div>
 {% endblock %}
