--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% block title %} Login {% endblock %}
 
 {% block content %} 
-    <img class="logo_ReFashioned" src="/static/img/logo_Refashioned_v2.jpg" alt="">
+    <img class="logo_ReFashioned" src="/static/img/logo_ReFashioned_v2_733.png" alt="">
     <div class="container-login">
         <p>Iniciar sesion</p>
         <form action="", method="post">
@@ -17,14 +17,14 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row"> 
                 <div class="col">
-                    <input class="inp-btn btn-blue" type="submit" value="Ingresar">
+                    <input class="inp-btn btn-green" type="submit" value="Ingresar">
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <button class="inp-btn btn-green" type="button"><a href="/signin">Crear cuenta</a></button>
+                    <a href="/signin"><button class="inp-btn btn-blue" type="button">Crear cuenta</button></a>
                 </div>
             </div>
         </form>
