--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,61 @@
 .container-content{
     padding: 20px;
 }
+:root{
+    --white: white;
+    --gray-box-shadow: #B8B8B8;
+}
+
+/* --------------- LOGIN, SIGNIN --------------- */
+.logo_ReFashioned{
+    width: 100%;
+    max-width: 250px;
+    margin: 0 auto 20px;
+    display: block;
+}
+.container-login, .container-signin{
+    width: 100%;
+    max-width: 350px;
+    padding: 20px 20px 0 20px;
+    border-radius: 10px;
+    margin: auto;
+    text-align: center;
+    background-color: white;
+    box-shadow: 0px 0px 15px 0px rgb(180, 180, 180);
+}
+.container-signin{
+    width: 100%;
+    max-width: 450px;
+}
+.container-login p, .container-signin p{
+    font-size: 23px;
+}
+.container-login input, .container-login button,
+.container-signin input, .container-signin button{
+    font-size: 15px;
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 5px;
+    border: 0;
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+.container-login .inp-btn, .container-signin .inp-btn{
+    font-size: 18px;
+    border: 0;
+    border-radius: 5px;
+}
+.container-login .btn-blue, .container-signin .btn-blue{
+    background-color: lightskyblue;
+}
+.container-login .btn-green, .container-signin .btn-green{
+    background-color: lightgreen;
+}
+button a{
+    text-decoration: none;
+    color: black;
+    width: 100%;
+    display: block;
+}
 
 /* --------------- NAVBAR --------------- */
 .container-page-nav{
@@ -57,61 +112,133 @@
     padding-left: 20px;
     width: 80%;
 }
-.producto{
+.product{
     background-color: rgb(255, 255, 255);
     margin: 5px 0;
-    padding: 20px;
+    padding: 10px 20px;
 }
-.producto p{
+.product p{
     margin: 0;
 }
 
-/* --------------- LOGIN, SIGNIN --------------- */
-.logo_ReFashioned{
-    width: 100%;
-    max-width: 250px;
-    margin: 20px auto;
-    display: block;
+/* --------------- ORDERS --------------- */
+.order-header{
+    padding: 10px 20px;
+    border-radius: 10px 10px 0 0;
+    background-color: rgb(218, 218, 218);
 }
-.container-login, .container-signin{
+.order-header label{
+    margin-right: 20px;
+}
+
+/* --------------- ACCOUNT --------------- */
+.body-profile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 -20px;
+}
+.cont-profile{
+    background-color: var(--white);
     width: 100%;
-    max-width: 350px;
-    padding: 20px 20px 0 20px;
+    max-width: 650px;
+    display: flex;
+    align-items: center;
+    height: 350px;
+    box-shadow: 0 0 15px var(--gray-box-shadow);
     border-radius: 10px;
-    margin: auto;
-    text-align: center;
-    box-shadow: 0px 0px 15px 0px rgb(180, 180, 180);
+    overflow: hidden;
 }
-.container-signin{
+.div-avatar-father{
+    display: flex;
+    align-items: center;
+    justify-content: right;
     width: 100%;
-    max-width: 450px;
+    max-width: 170px;
+    height: 100%;
+    margin-right: 70px;
+    box-shadow: 0px 0 20px var(--gray-box-shadow);
+    background: linear-gradient(to right, #c6a3dd, #9abdc9);
 }
-.container-login p, .container-signin p{
-    font-size: 23px;
-}
-.container-login input, .container-login button,
-.container-signin input, .container-signin button{
-    font-size: 15px;
-    width: 100%;
-    margin-bottom: 20px;
+.div-avatar{
+    background-color: var(--white);
+    border-radius: 50%;
     padding: 5px;
-    border: 0;
-    border-bottom: 1px solid rgb(0, 0, 0);
+    position: relative;
+    right: -65px;
 }
-.container-login .inp-btn, .container-signin .inp-btn{
-    font-size: 18px;
-    border: 0;
-    border-radius: 5px;
+.avatar{
+    width: 130px;
 }
-.container-login .btn-blue, .container-signin .btn-blue{
-    background-color: lightskyblue;
+/* info account */
+.profile-info{
+    padding: 10px;
 }
-.container-login .btn-green, .container-signin .btn-green{
-    background-color: lightgreen;
+.profile-head p{
+    margin: 0;
+    font-weight: 600;
+    font-size: 30px;
 }
-button a{
-    text-decoration: none;
-    color: black;
-    width: 100%;
-    display: block;
+.profile-head hr{
+    margin-right: 50px;
 }
+.profile-head label{
+    font-size: 19px;
+}
+.profile-body .col{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.profile-body .th{
+    font-weight: 700;
+}
+.profile-body{
+    font-size: 15px;
+}
+.btn-profile{
+    width: 110px;
+    height: 40px;
+    margin: 20px 40px 0 0;
+    font-weight: 500;
+    border-radius: 50px;
+    border: none;
+    color: var(--white);
+}
+.btn-logout{
+    box-shadow: 5px 5px 10px rgb(236, 105, 105 , 0.4);
+    background: linear-gradient(to right, #ec6969, #f0b066);
+}
+.btn-home{
+    box-shadow: 5px 5px 10px rgb(106, 223, 125 , 0.4);
+    background: linear-gradient(to right, #6adf7d, #57dabd);
+}
+@media screen and (max-width: 700px) {
+    .cont-profile{
+        display: block;
+        max-width: 400px;
+        height: auto;
+    }
+    .div-avatar-father{
+        justify-content: center;
+        width: 100%;
+        max-width: 100%;
+        background: linear-gradient(to top, #c6a3dd, #9abdc9);
+        margin-bottom: 50px;
+    }
+    .div-avatar{
+        right: 0px;
+        bottom: -65px;
+    }
+    /* info account*/
+    .profile-info{
+        text-align: center;
+        padding: 10px;
+    }
+    .profile-head hr{
+        margin-right: 0;
+    }
+    .btn-profile{
+        margin: 10px 20px;
+    }
+}
+
