--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,23 @@
 {% extends 'base.html' %}
 {% block title %} Login {% endblock %}
 
+
 {% block content %} 
+    {% if alert %}
+        <script>alert('{{alert}}')</script>
+    {% endif %}
     <img class="logo_ReFashioned" src="/static/img/logo_ReFashioned_v2_733.png" alt="">
     <div class="container-login">
         <p>Iniciar sesion</p>
-        <form action="", method="post">
+        <form action="", method="post" >
             <div class="row">
                 <div class="col">
-                    <input class="inp-login" type="text" name="user" placeholder="Usuario">
+                    <input class="inp-login" type="email" name="email" placeholder="Correo" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <input class="inp-login" type="password" name="password" placeholder="Contraseña">
+                    <input class="inp-login" type="password" name="password" placeholder="Contraseña" required>
                 </div>
             </div>
 
@@ -24,7 +28,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a href="/signin"><button class="inp-btn btn-blue" type="button">Crear cuenta</button></a>
+                    <a href="/signin"><input class="inp-btn btn-blue" type="button" value="Crear cuenta"></a>
                 </div>
             </div>
         </form>
