--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 .container-content{
-    padding: 20px;
+    padding: 20px 20px 20px;
 }
 :root{
     --white: white;
@@ -48,11 +48,11 @@
     border: 0;
     border-radius: 5px;
 }
-.container-login .btn-blue, .container-signin .btn-blue{
-    background-color: lightskyblue;
-}
 .container-login .btn-green, .container-signin .btn-green{
     background-color: lightgreen;
+}
+.container-login .btn-blue, .container-signin .btn-blue{
+    background-color: lightskyblue;
 }
 button a{
     text-decoration: none;
@@ -64,7 +64,7 @@ button a{
 /* --------------- NAVBAR --------------- */
 .container-page-nav{
     height: 80px;
-    background-color: rgb(197, 202, 255); 
+    background-color: rgb(169, 195, 255); 
 }
 .page-nav{
     display: flex;
@@ -80,8 +80,12 @@ button a{
     text-decoration: none;
     color: black;
 }
-.page-nav .nav-account{
+.page-nav .nav-user-type{
     margin-left: auto;
+}
+.page-nav .avatar{
+    width: 40px;
+    height: 40px;
 }
 
 /* --------------- HOME --------------- */
@@ -104,31 +108,104 @@ button a{
 }
 .aside-left{
     width: 20%;
-    /* height: 100vh; */
-    max-height: 100vh;
-    
 }
+.aside-left .product .inp-icon-trash{
+    width: 25px;
+    padding: 6px;
+    border-radius: 5px;
+    /* border: 1px solid black; */
+    background-color: lightcoral;
+}
+.aside-left .btn-do-order{
+    width: 100%;
+    font-size: 18px;
+    border: 0;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: lightgreen;
+}
+
 .main-page{
     padding-left: 20px;
     width: 80%;
-}
-.product{
-    background-color: rgb(255, 255, 255);
+} 
+.div-products .product, .aside-left .product{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: 5px 0;
     padding: 10px 20px;
+    background-color: white;
 }
-.product p{
+.div-products .product form, .aside-left .product form{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.div-products .product p, .aside-left .product p{
     margin: 0;
+}
+.div-products .product .inp-quantity{
+    width: 40px;
+    border: none;
+    border-bottom: 1px solid black;
+    /* max-width: 50px; */
+}
+.div-products .product div:nth-child(2), .aside-left .product div:nth-child(2){
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.div-products .product .inp-icon-shop{
+    width: 30px;
+    padding: 6px;
+    border-radius: 5px;
+    /* border: 1px solid black; */
+    background-color: lightgreen;
 }
 
 /* --------------- ORDERS --------------- */
 .order-header{
     padding: 10px 20px;
     border-radius: 10px 10px 0 0;
-    background-color: rgb(218, 218, 218);
+    /* background-color: rgb(218, 218, 218); */
+    background-color: #bcf0c8;
 }
 .order-header label{
     margin-right: 20px;
+}
+.order .product{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 5px 0;
+    padding: 10px 20px;
+    background-color: white;
+}
+.order .product p{
+    margin: 0;
+}
+
+/* --------------- SHIPMENTS --------------- */
+.shipment-header{
+    padding: 10px 20px;
+    border-radius: 10px 10px 0 0;
+    /* background-color: rgb(218, 218, 218); */
+    background-color: #bcf0c8;
+}
+.shipment-header label{
+    margin-right: 20px;
+}
+.shipment .order{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 5px 0;
+    padding: 10px 20px;
+    background-color: white;
+}
+.shipment .order p{
+    margin: 0;
 }
 
 /* --------------- ACCOUNT --------------- */
@@ -141,7 +218,7 @@ button a{
 .cont-profile{
     background-color: var(--white);
     width: 100%;
-    max-width: 650px;
+    max-width: 700px;
     display: flex;
     align-items: center;
     height: 350px;
@@ -167,7 +244,7 @@ button a{
     position: relative;
     right: -65px;
 }
-.avatar{
+.div-avatar .avatar{
     width: 130px;
 }
 /* info account */
@@ -194,11 +271,12 @@ button a{
 }
 .profile-body{
     font-size: 15px;
+    padding-right: 20px;
 }
 .btn-profile{
     width: 110px;
     height: 40px;
-    margin: 20px 40px 0 0;
+    margin: 20px 100px 0 0;
     font-weight: 500;
     border-radius: 50px;
     border: none;
