--- a/templates/orders.html
+++ b/templates/orders.html
@@ -18,18 +18,24 @@
                 <div class="order">
                     {% for order in orders %}
                         <div class="order-header">
-                            <label>Id pedido: {{order.IdPedido}}</label>
-                            <label>Fecha: {{order.Fecha}}</label>
-                            <label>Total: {{order.Total}}</label>
-                            <label>Estado: Pendiente</label>
+                            <label>Id pedido: {{order.id_pedido}}</label>
+                            <label>Fecha: {{order.fecha_pedido}}</label>
+                            <label>Total: {{order.total_pedido}}</label>
                         </div>
-                        {% for product in order.Productos %}
-                            <div class="product">
-                                <p>Nombre: {{product.Nombre}}</p>
-                                <p>Precio: {{product.Precio}}</p>
-                            </div>
+                        {% for detail in orderDetails %}
+                            {% if detail.pedido_id_pedido == order.id_pedido %}
+                                {% for product in products %}
+                                    {% if product.id_producto == detail.producto_id_producto %}
+                                        <div class="product">
+                                            <p>Nombre: {{product.nombre_producto}}</p>
+                                            <p>Precio: {{product.precio}}</p>
+                                            <p>Cantidad: {{detail.cantidad_ordenada}}</p>
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            {% endif %}
                         {% endfor %}
-                {% endfor %}
+                    {% endfor %}
                 </div>
             </div>
         </main>
