--- a/templates/products.html
+++ b/templates/products.html
@@ -21,7 +21,7 @@
                 <div>
                     <input type="checkbox" name="talla" id=""> <label for="L">L</label>
                 </div>
-            <h6>Cateoria</h6>
+            <h6>Categoria</h6>
             <div>
                 <input type="checkbox" name="cateoria" id=""> <label for="pantalones">Pantalones</label>
             </div>
@@ -30,7 +30,27 @@
             </div>
             <div>
                 <input type="checkbox" name="cateoria" id=""> <label for="zapatos">Zapatos</label>
-            </div>
+            </div>  
+
+            <h4>Carrito de compras</h4>
+            {% for cartProduct in cartProducts %}
+                <div class="product">
+                    <div>
+                        <p>{{cartProduct.product.nombre}}</p>
+                    </div>
+                    <div>
+                        <label for="">X {{cartProduct.product.cantidad}}</label>
+                        <form action="/delProduct/{{cartProduct.id}}" method="post">
+                            <input class="inp-icon-trash" type="image" src="static/Icons/trash-can-regular.svg" value="">
+                        </form>
+                    </div>
+                </div>
+            {% endfor %}
+            {% if cartProducts|length != 0 %}
+                <form action="/orders" >
+                    <input class="btn-do-order" type="submit" value="Realizar pedido">
+                </form>
+            {% endif %}
         </aside>
 
         <main class="main-page">
@@ -38,8 +58,21 @@
             <div class="div-products">
                 {% for product in products %}
                     <div class="product">
-                        <p>Nombre: {{product.Nombre}}</p>
-                        <p>Precio: {{product.Precio}}</p>
+                        <div>
+                            <p><b>Nombre:</b>  {{product.nombre_producto}}</p>
+                            <p><b>Precio:</b> {{product.precio}}$</p>
+                            <p><b>Categoria:</b> {{product.categoria}}</p>
+                            <p><b>Talla:</b> {{product.talla}}</p>
+                            <p><b>Marca:</b> {{product.marca}}</p>
+                            <p><b>Stock:</b> {{product.cantidad_disponible}}</p>
+                        </div>
+                        <div>
+                            <form action="/addProduct/{{product.id_producto}}" method="post">
+                                <label for="">Cantidad:</label>
+                                <input class="inp-quantity" type="number" name="quantity" id="" value="1">
+                                <input class="inp-icon-shop" type="image" src="static/icons/cart-arrow-down-solid.svg" title="agregar al carrito">
+                            </form>
+                        </div>
                     </div>
                 {% endfor %}
             </div>
