--- a/templates/updateAccount.html
+++ b/templates/updateAccount.html
@@ -10,43 +10,40 @@
     <form action="", method="post">
         <div class="row">
             <div class="col">
-                <input class="inp-login" type="text" name="name" placeholder="Nombre">
+                <input class="inp-login" type="text" name="name" placeholder="Nombre" value="{{user.nombre_persona}}">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <input class="inp-login" type="email" name="email" placeholder="Correo" value="{{user.correo_persona}}" disabled >
             </div>
             <div class="col-5">
-                <input class="inp-login" type="number" name="identification" placeholder="Num. identificacion">
+                <input class="inp-login" type="number" name="cellphone" placeholder="Num. telefono" value="{{user.numero_telefonico}}">
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <input class="inp-login" type="email" name="email" placeholder="Correo" disabled >
+                <input class="inp-login" type="text" name="country" placeholder="Pais" value="{{adress.pais}}">
             </div>
-            <div class="col-5">
-                <input class="inp-login" type="number" name="cellphone" placeholder="Num. telefono">
+            <div class="col">
+                <input class="inp-login" type="text" name="city" placeholder="Ciudad" value="{{adress.ciudad}}">
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <input class="inp-login" type="text" name="country" placeholder="Pais">
+                <input class="inp-login" type="text" name="department" placeholder="Departamento" value="{{adress.departamento}}">
             </div>
             <div class="col">
-                <input class="inp-login" type="text" name="city" placeholder="Ciudad">
+                <input class="inp-login" type="text" name="postal_code" placeholder="Codigo postal" value="{{adress.codigo_postal}}">
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <input class="inp-login" type="text" name="department" placeholder="Departamento">
+                <input class="inp-login" type="text" name="adress" placeholder="Direccion" value="{{adress.direccion}}">
             </div>
             <div class="col">
-                <input class="inp-login" type="text" name="postal_code" placeholder="Codigo postal">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <input class="inp-login" type="text" name="adress" placeholder="Direccion">
-            </div>
-            <div class="col">
-                <input class="inp-login" type="text" name="aditional_info" placeholder="Informacion adicional">
-            </div>
+                <input class="inp-login" type="text" name="aditional_info" placeholder="Informacion adicional" value="{{adress.complemento}}">
+            </div> 
         </div>
 
         <div class="row">
